[package]
name = "mcts-boardgames"
version = "0.1.0"
authors = ["Yoann Blein <yoann.blein@free.fr>"]

[lib]
name = "mcts"
path = "src/mcts.rs"

[[bin]]
name = "checkers"
path = "src/checkers.rs"

[[bin]]
name = "ttt"
path = "src/ttt.rs"

[[bin]]
name = "connect4"
path = "src/connect4.rs"

[dependencies]
rand = "0.3"
time = "*"
